2018-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix bug with one path to object allocation
	failing to record the object for memory debuggin purposes.

2018-01-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m:
	Tweaks for OSX compatibility ... treat a missinp path in an http URL
	as an empty string rather than as nil.

2018-01-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m:
	* Tests/base/NSFileManager/general.m:
	Added <graham@iamleeg.com> Graham Lee's fix for #51592 to not raise
	an assertion, but rather call the handler if the source file being
	copied does not exist.

2017-12-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSocketPort.m:
	* Source/NSMessagePort.m:
	* Source/win32/NSMessagePort.m:
	There is a possible race condition when attempting to write a message
	to a port; the port handle is added to the run loop and then the loop
	is entered, but if an event occurs in the loop which invalidates the
	handle and causes it to be removed from the loop before the lower
	level code to wait for I/O is entered, the loop may never receive an
	event on the handle and could wait indefinitely.
	The solution is not to remove the handle from the loop when it is
	invalidated or when an event occurs on an invalidated handle, but
	only remove it in the method which added it.  Of course, this means
	we must make certain to remove it when we should, which means that
	the loop must be run inside an exception handler which makes sure to
	remove the handle from the loop before re-raising the exception.

2017-12-31  Ivan Vucica <ivan@vucica.net>

	* ANNOUNCE
	* NEWS
	* Documentation/ReleaseNotes.gsdoc
	* Documentation/news.texi: Update release notes for 1.25.1 to
	take note of compatibility improvement changes since release
	notes were written, and to fix a typo.

2017-12-21  Riccardo Mottola <rm@gnu.org>

	* Source/NSObject.m:
	Cleanup previous commit.

2017-12-21  Riccardo Mottola <rm@gnu.org>
