@@ -1,3 +1,8 @@
+2018-01-11  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSXMLParser.m: OSX compatibility tweaks and correction
+	for setting entity resolution flag in sloppy parser.
+
 2018-01-04  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSObject.m: Fix bug with one path to object allocation
